# cw-tail

./: .gitignore  README.md  config.example.yml  pyproject.toml
cw_tail/: cw_tail.py  utils.py
tests/: __init__.py  test_colors.py  test_cw_tail.py  test_formatters.py  test_main.py  test_sleep.py  test_utils.py
